Products page bug fix on mobile

--- a/app/blocks/product/product.styl
+++ b/app/blocks/product/product.styl
@@ -10,6 +10,7 @@
 			display: flex
 			flex-direction: column
 			width: calc(33.33% - 30px)
+			min-width: 370px
 			margin: 15px
 		& .product__img
 			display: flex
@@ -86,7 +87,16 @@
 				z-index: -1
 			&:hover
 				height: 100%
-@media (max-width: 800px)
+@media (max-width: 600px)
+	.product__list
+		flex-direction: column
+		width: 100%
+		& .product__item
+			width: auto
+			min-width: 300px
+			& img
+				height: 100%
+
 	// .product--wrapper
 	// 	justify-content space-around
 	// 	margin: -10px
